@@ -58,12 +58,22 @@
                             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.5.4</version>
+                    <configuration>
+                        <argLine>
+                            --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+                            --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+                            --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                            --add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+                            --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                        </argLine>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
